--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="sign_up_text"> <u>Registrati</u></string>
     <string name="no_account_question">Non hai un account?</string>
     <string name="button_confirm_reset_text">Conferma il reset</string>
+    <string name="chip_save_text">Salva</string>
+    <string name="route_placeholder_text">Itinerario</string>
 </resources>
