--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -60,4 +60,10 @@
     <string name="button_confirm_reset_text">Conferma il reset</string>
     <string name="chip_save_text">Salva</string>
     <string name="route_placeholder_text">Itinerario</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="placeholder_username">\@username</string>
+    <string name="chip_text_settings">Impostazioni</string>
+    <string name="itinerary_placeholder">Itinerario</string>
+    <string name="description_placeholder">Descrizione</string>
 </resources>
