--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -448,7 +448,7 @@ Mattia \textsc{Rossi} N86003211} %Nome studenti
 			\textbf{Nome} & \textbf{Descrizione} \\
 			\hline
 			Conversazioni private & Il sistema deve permettere all'utente autenticato lo scambio di informazioni con altri utenti.
-			È possibile ææavviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario. \\
+			È possibile avviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario. \\
 			\hline
 		\end{tabular}
 		\caption{RF20}
