--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="done_select_photos">Fatto</string>
     <string name="no_more_photo">Non puoi selezionare altre foto</string>
     <string name="insert_post_photos">Manca poco!\nInserisci fino a un massimo di <b>5 foto</b> per descrivere il tuo post.</string>
+    <string name="confirm_route_fab">Inserisci itinerario</string>
 </resources>
