Aggiunto dettaglio itinerario e filtri

--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="code_check">Il codice deve contenere 6 cifre</string>
     <string name="next_fab">Avanti</string>
     <string name="disability_friendly_info">Non accessibile a persone con disabilità</string>
-    <string name="disability_friendly">Accessibilità</string>
+    <string name="disability_friendly">Accessibilità ai disabili</string>
     <string name="easy_difficulty">Facile</string>
     <string name="intermediate_difficulty">Intermedio</string>
     <string name="difficult_difficulty">Difficile</string>
@@ -92,4 +92,6 @@
     <string name="no_more_photo">Non puoi selezionare altre foto</string>
     <string name="insert_post_photos">Manca poco!\nInserisci fino a un massimo di <b>5 foto</b> per descrivere il tuo post.</string>
     <string name="confirm_route_fab">Inserisci itinerario</string>
+    <string name="choose_position">Scegli una posizione</string>
+    <string name="duration_placeholder_details">%1$d ore</string>
 </resources>
