--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <!-- ERRORS RELATED TO NETWORK OR STORAGE -->
     <string name="data_corrupted">Try to reinstall app, data may be corrupted</string>
     <string name="retrofit_http_error">Unexpected error, retry</string>
-    <string name="internet_error">Check your internet connection</string>
+    <string name="internet_error">Controlla la tua connessione ad internet</string>
 
     <string name="bad_request">Operazione effettuata non valida, controlla le informazioni inserite</string>
     <string name="forbidden">Non hai i permessi necessari per effettuare l\'operazione</string>
@@ -59,7 +59,7 @@
     <string name="service_unavailable">Servizio non disponibile, riprova più tardi</string>
     <string name="timeout">Timeout della richiesta, riprova</string>
     <string name="unauthorized">Non sei autenticato correttamente per l\'utilizzo dei servizi</string>
-    
+
     <string name="confirmed_account">Account confermato, effettua l\'accesso!</string>
     <string name="code_resent">Il codice è stato inviato di nuovo.</string>
     <string name="button_confirm_text">Conferma registrazione</string>
@@ -109,4 +109,9 @@
     <string name="easy_label">Facile</string>
     <string name="medium_label">Intermedio</string>
     <string name="hard_label">Difficile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="compilation_created">La tua compilation è stata creata con successo!</string>
+    <string name="file_not_valid">File non validi, riprova</string>
+    <string name="storage_error">Impossibile accedere ai file, riprova.</string>
 </resources>
