--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="file_not_valid">File non validi, riprova</string>
     <string name="storage_error">Impossibile accedere ai file, riprova.</string>
     <string name="route_added_compilation">Itinerario aggiunto alla compilation!</string>
+    <string name="report_inserted">La tua segnalazione è stata inoltrata con successo.</string>
 </resources>
