Implementata Base Dialog per una gestione migliore di rimozioni e altre azioni rapide per evitare ripetizioni nel codice. Segnalazione Ok, Valutazione Ok.
Da fare:
- Chat
- Admin
- Revisione per rimozioni post e itinerari

--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="storage_error">Impossibile accedere ai file, riprova.</string>
     <string name="route_added_compilation">Itinerario aggiunto alla compilation!</string>
     <string name="report_inserted">La tua segnalazione è stata inoltrata con successo.</string>
+    <string name="rating_inserted">La tua valutazione è stata inserita con successo.</string>
 </resources>
