--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="route_added_compilation">Itinerario aggiunto alla compilation!</string>
     <string name="report_inserted">La tua segnalazione è stata inoltrata con successo.</string>
     <string name="rating_inserted">La tua valutazione è stata inserita con successo.</string>
+    <string name="title_chat">Chat</string>
 </resources>
